# verisim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: python-package.yml  release.yml
examples/: __init__.py  basic_person.py  company_record.py  context_repair.py  dataset_generation.py  product_record.py
scripts/: build_country_datasets.py
src/verisim/: __init__.py  ai.py  api.py  cli.py  constants.py  context.py  data.py  errors.py  locale_loader.py  models.py  packs.py  providers.py  registry.py  types.py  utils.py
src/verisim/datasets/: __init__.py
src/verisim/datasets/countries/: AU.json  BR.json  CN.json  DE.json  FR.json  IN.json  US.json  __init__.py
src/verisim/datasets/locales/: __init__.py  de_DE.json  en_AU.json  en_CA.json  en_GB.json  en_IN.json  en_US.json  es_MX.json  fr_FR.json  hi_IN.json  ja_JP.json  pt_BR.json  zh_CN.json
tests/: test_build_country_datasets.py  test_cli.py  test_company_record.py  test_coverage_edges.py  test_examples.py  test_generation.py  test_product_record.py
