[project]
name = "verisim"
version = "0.1.0"
description = "Context-aware synthetic data generation for coherent Pydantic domain models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
lite = []
full = []
ai = []
dev = [
  "autoflake>=2.3",
  "black>=25.0",
  "coverage[toml]>=7.5",
  "isort>=5.13",
  "pytest>=8.0",
  "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verisim", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
(
  ^/.venv/
)
'''

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 311
skip = [".venv"]

[tool.autoflake]
check = false
expand-star-imports = true
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.coverage.run]
source = ["src/verisim", "examples"]

[tool.coverage.report]
show_missing = true
skip_covered = false
