[project]
name = "verisim"
version = "0.1.0"
description = "Context-aware synthetic data generation for coherent Pydantic domain models."
readme = "README.md"
authors = [{ name = "Harshal Parekh" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
]

[project.scripts]
verisim = "verisim.cli:app"

[project.urls]
Homepage = "https://github.com/Harshal96/verisim"
Repository = "https://github.com/Harshal96/verisim"
Issues = "https://github.com/Harshal96/verisim/issues"

[project.optional-dependencies]
lite = []
full = []
ai = []
dev = [
  "autoflake>=2.3",
  "black>=25.0",
  "coverage[toml]>=7.5",
  "isort>=5.13",
  "pytest>=8.0",
  "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verisim", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
(
  ^/.venv/
)
'''

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 311
skip = [".venv"]

[tool.autoflake]
check = false
expand-star-imports = true
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.coverage.run]
source = ["src/verisim", "examples"]

[tool.coverage.report]
show_missing = true
skip_covered = false
